# geometry_lib

./: CMakeLists.txt  README.md  main.cpp
include/geometry/: circle.hpp  rectangle.hpp  shape.hpp
src/: circle.cpp  rectangle.cpp
